# AIML-System

./: .gitignore  ANALYSIS_AND_FIXES.md
AIML/python-cheating-system/: Dockerfile  pyproject.toml  requirements.txt  run.py
AIML/python-cheating-system/api/: session_manager.py
AIML/python-cheating-system/frontend/: ProctoringService.js
AIML/python-cheating-system/legacy/ai-proctoring/: main.py
AIML/python-cheating-system/legacy/ai-proctoring/exam-cheating-detection-optimized/: CHANGES.md  README.md  requirements.txt
AIML/python-cheating-system/legacy/ai-proctoring/exam-cheating-detection-optimized/config/: config.yaml
AIML/python-cheating-system/legacy/ai-proctoring/exam-cheating-detection-optimized/src/: main.py
AIML/python-cheating-system/legacy/app/: config.py  main.py
AIML/python-cheating-system/legacy/app/agents/: audio_agent.py  base.py  eval_agent.py  eval_agent_oss.py  orchestrator.py  proctor_agent.py
AIML/python-cheating-system/legacy/app/core/: exceptions.py  logging.py  security.py  session_store.py
AIML/python-cheating-system/legacy/app/schemas/: __init__.py
AIML/python-cheating-system/legacy/app/ws/: proctor_ws.py
AIML/python-cheating-system/proctoring/: standalone_test.py
AIML/python-cheating-system/proctoring/anti_cheating/: rules_engine.py
AIML/python-cheating-system/proctoring/core/: buffer.py  camera.py  engine.py
AIML/python-cheating-system/proctoring/detectors/: face_worker.py  object_worker.py
AIML/python-cheating-system/proctoring/integration/: aural_integration.py
AIML/python-cheating-system/tests/: test_api.py
(+311 files in other folders)
